# NMEA-Parser

./: .gitignore  CMakeLists.txt  Makefile  README.md  libnmeaConfig.cmake.in  libnmeaConfigVersion.cmake.in
examples/: parse_stdin.c
inc/: nmea.h
inc/nmea/: gpgga.h  gprmc.h  parse.h
src/: CMakeLists.txt
src/nmea/: CMakeLists.txt  nmea.c  nmea.h  parser.c  parser_static.c  parser_types.h
src/parsers/: CMakeLists.txt  gpgga.c  gpgga.h  gpgsa.c  gpgsa.h  gpgsv.c  gpgsv.h  gprmc.c  gprmc.h  parse.c  parse.h
